# napari-tiled

./: LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
src/napari_tiled_browser/: napari.yaml  tiled_widget.py
src/napari_tiled_browser/_tests/: test_widget.py
