[build-system]
requires = ["setuptools>=42.0.0", "tiled[array,minimal-client]", "wheel"]
build-backend = "setuptools.build_meta"

[options.entry_points]
napari.manifest = "napari_tiled_browser:napari.yaml"

[options.package_data]
napari-tiled = "napari.yaml"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
